pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-273-list_items.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 123
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/273-list_items.md
---
 1. 
    [32m────────────────────[0m
    [33mindented code
[0m    [32m────────────────────[0m

    paragraph

    [32m────────────────────[0m
    [33mmore code
[0m    [32m────────────────────[0m
